--- a/nextcloud_odoo_sync/views/calendar_event_views.xml
+++ b/nextcloud_odoo_sync/views/calendar_event_views.xml
@@ -1,24 +1,77 @@
 <odoo>
 	<data>
+		<!-- Inherit calendar.event search -->
+		<record id="calendar_event_search_view" model="ir.ui.view">
+	        <field name="name">calendar.event.search.view</field>
+	        <field name="model">calendar.event</field>
+	        <field name="inherit_id" ref="calendar.view_calendar_event_search"/>
+	        <field name="arch" type="xml">
+	        	<field name="partner_ids" position="before">
+	        		<field name="nc_calendar_id"/>
+	        	</field>	        	
+	        </field>
+		</record>
+	
+		<!-- Inherit calendar.event tree -->
+		<record id="calendar_event_tree_view" model="ir.ui.view">
+	        <field name="name">calendar.event.tree.view</field>
+	        <field name="model">calendar.event</field>
+	        <field name="inherit_id" ref="calendar.view_calendar_event_tree"/>
+	        <field name="arch" type="xml">
+	        	<field name="partner_ids" position="before">
+	        		<field name="nc_calendar_id" optional="show"/>
+	        	</field>
+	        	<field name="description" position="after">
+	        		<field name="nc_uid" optional="hide"/>
+	        		<field name="nc_calendar_hash" optional="hide"/>
+	        	</field>
+	        </field>
+		</record>
+	
+		<!-- Inherit calendar.event form -->
 		<record id="calendar_event_form_view" model="ir.ui.view">
 	        <field name="name">calendar.event.form.view</field>
 	        <field name="model">calendar.event</field>
 	        <field name="inherit_id" ref="calendar.view_calendar_event_form"/>
 	        <field name="arch" type="xml">
 				<xpath expr="//page[@name='page_invitations']" position="after">
-				     <page name="nextcloud_page" string="Nextcloud" groups="base.group_no_one">
+				    <page name="nextcloud_page" string="Nextcloud" groups="base.group_no_one">
 				     	<group>
-				     		<field name="nc_uid" string="UID"/>
-					     	<field name="nc_calendar_hash" string="Calendar Hash"/>
-					     	<field name="nc_status" string="Status"/>
-					     	<field name="nc_color" String="Color"/>
-					     	<field name="nc_resources" string="Resources"/>
-					     	<field name="nc_calendar_ids" string="Calendar" widget="many2many_tags"/>
-					     	<field name="nc_synced" string="Synced"/>
+				     		<field name="nc_uid"/>
+					     	<field name="nc_calendar_hash"/>
+					     	<field name="nc_color"/>
+					     	<field name="nc_resources"/>
+					     	<field name="nc_synced"/>
+					     	<field name="nc_to_delete"/>
+					     	<field name="nc_allday"/>
 				     	</group>
-				     </page>
+				    </page>
 				</xpath>
+				<field name="start_date" position="before">			
+					<label for="nc_calendar_select" attrs="{'invisible':[('nc_require_calendar','=',False)]}"/>
+					<div class="o_row" attrs="{'invisible':[('nc_require_calendar','=',False)]}">
+						<field name="nc_calendar_id" class="oe_read_only" widget="selection"/>
+						<field name="nc_calendar_select" class="oe_edit_only"
+							attrs="{'required':[('nc_require_calendar','=',True)]}"/>	
+					</div>																
+					<field name="nc_calendar_ids" widget="many2many_tags" invisible="1"/>		
+					<field name="nc_require_calendar" invisible="1"/>							
+				</field>
+				
+				<field name="alarm_ids" position="replace">
+					<field name="alarm_ids" widget="many2many_tags" options="{'no_create': True, 'no_create_edit':True}"/>
+				</field>
+				
+				<field name="categ_ids" position="after">
+					<field name="nc_status" widget="selection"/>
+				</field>
 	      	</field>
+		</record>
+		
+		<!-- Add domain filter to exclude events to be deleted in Nextcloud and Odoo -->
+		<record id="calendar.action_calendar_event" model="ir.actions.act_window">
+			<field name="domain">[('nc_to_delete', '=', False)]</field>
+			<field name="context">{}</field>
 		</record>
 	</data>
 </odoo>
