--- a/nextcloud_odoo_sync/views/nc_sync_user_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_user_views.xml
@@ -5,11 +5,42 @@
 			<field name="model">nc.sync.user</field>
 			<field name="arch" type="xml">
 				<tree string="Nextcloud Sync User Tree">
-					<field name="user_id" string="Odoo User"/>
-					<field name="nextcloud_user_id" string="NextCloud User ID"/>
-					<field name="user_name" string="NextCloud Username"/>
+					<field name="user_id"/>
+					<field name="user_name"/>
 					<field name="sync_calendar"/>
 				</tree>
+			</field>
+		</record>
+		
+		<record id="nc_sync_user_connect_form_view" model="ir.ui.view">
+			<field name="name">nc.sync.user.form.view</field>
+			<field name="model">nc.sync.user</field>
+			<field name="arch" type="xml">
+				<form string="Nextcloud Sync User Form">
+					<sheet>
+						<div class="oe_title" invisible="context.get('pop_up', False)">
+	                        <div>
+	                            <label for="user_id"/>
+	                        </div>
+	                        <h3>
+	                            <field name="user_id"/>
+	                        </h3>
+	                    </div>	
+						<group>
+							<group>
+								<field name="user_name"/>
+							</group>
+							<group>
+								<field name="nc_password" password="True"/>
+								<field name="sync_calendar"/>
+								<field name="nextcloud_user_id" invisible="1"/>
+							</group>
+						</group>
+					</sheet>
+					<footer invisible="context.get('no_footer',False)">
+						<button name="check_nc_connection" string="Login to Nextcloud" type="object" class="btn btn-primary"/>
+					</footer>
+				</form>
 			</field>
 		</record>
 		
@@ -19,9 +50,9 @@
 			<field name="arch" type="xml">
 				<form string="Nextcloud Sync User Form">
 					<sheet>
-						<div class="oe_title">
+						<div class="oe_title" invisible="context.get('pop_up', False)">
 	                        <div>
-	                            <label for="user_id" string="Odoo User"/>
+	                            <label for="user_id"/>
 	                        </div>
 	                        <h3>
 	                            <field name="user_id"/>
@@ -29,14 +60,27 @@
 	                    </div>	
 						<group>
 							<group>
-								<field name="user_name" string="NextCloud Username"/>
-								<field name="sync_calendar"/>
+								<field name="user_has_calendar" invisible="1"/>
+								<field name="user_name"/>
+								<field name="nc_calendar_id" widget="selection"
+									domain="[('user_id', '=', user_id)]" attrs="{'required': [('user_has_calendar', '=', True)]}"/>
 							</group>
 							<group>
-								<field name="nextcloud_user_id" string="NextCloud User ID"/>
+								<field name="nc_password" password="True"/>
+								<field name="sync_calendar"/>
+								<field name="nextcloud_user_id" invisible="1"/>
 							</group>
 						</group>
+						<div class="alert alert-info" role="alert" attrs="{'invisible': [('nc_calendar_id', '=', False)]}">
+						  	<span>
+						  		<field name="user_message" readonly="1" force_save="1"/>
+						  	</span>
+						</div>
 					</sheet>
+					<footer invisible="context.get('no_footer',False)">
+						<button name="save_user_config" string="Save" icon="fa-check" class="btn btn-primary" type="object"/>
+						<button string="Discard" class="btn-secondary" special="cancel" icon="fa-times"/>
+					</footer>
 				</form>
 			</field>
 		</record>
@@ -45,9 +89,11 @@
 			<field name="name">User Setup</field>
 			<field name="res_model">nc.sync.user</field>
 			<field name="view_mode">tree,form</field>
+			<field name="context">{'no_footer':1}</field>
 		</record>
 		
-		<menuitem name="Nextcloud Sync" id="menu_main_nextcloud" 
+		<menuitem name="Nextcloud Sync" id="menu_main_nextcloud"
+			groups="nextcloud_odoo_sync.group_nextcloud_sync_user"
 			sequence="1" web_icon="nextcloud_odoo_sync,static/description/menu_icon.png"/>
 		
 		<menuitem
