--- a/nextcloud_odoo_sync/views/nc_sync_log_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_log_views.xml
@@ -8,7 +8,7 @@
 				<tree string="Nextcloud Sync Log Tree" create="0" edit="0" decoration-danger="state in ('failed', 'error')" default_order="date_start desc">
 					<field name="name"/>
 					<field name="state" invisible="1"/>
-					<field name="description" invisible="1"/>
+					<field name="description"/>
 					<field name="date_start"/>
 					<field name="date_end"/>
 					<field name="duration"/>
@@ -36,9 +36,9 @@
 							<field name="duration"/>
 						</group>
 						<group>
-							<field name="description" invisible="1"/>
 							<field name="next_cloud_url"/>
 							<field name="date_end"/>
+							<field name="description"/>
 						</group>
 					</group>
 					<field name="line_ids" readonly="1">
