[FIX] Fixed issues: #3, #5, #6, #7, #9, #10 and bump version to 0.8

--- a/nextcloud_odoo_sync/views/calendar_event_views.xml
+++ b/nextcloud_odoo_sync/views/calendar_event_views.xml
@@ -57,7 +57,12 @@
 				</field>
 				
 				<field name="categ_ids" position="after">
-					<field name="nc_status" widget="selection"/>
+					<field name="nc_status" widget="selection" 
+						attrs="{'required':[('nc_require_calendar','=',True)], 'invisible':[('nc_require_calendar','=',False)]}"/>
+				</field>
+				
+				<field name="user_id" position="attributes">
+					<attribute name="attrs">{'readonly': [('nc_uid', '!=', False)]}</attribute>
 				</field>
 	      	</field>
 		</record>
