--- a/nextcloud_odoo_sync/views/nc_sync_user_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_user_views.xml
@@ -12,53 +12,15 @@
 			</field>
 		</record>
 		
-		<record id="nc_sync_user_connect_form_view" model="ir.ui.view">
-			<field name="name">nc.sync.user.form.view</field>
-			<field name="model">nc.sync.user</field>
-			<field name="arch" type="xml">
-				<form string="Nextcloud Sync User Form">
-					<header>
-						<button name="get_all_user_events" type="object" string="Get Events" groups="base.group_no_one"/>
-					</header>
-					<sheet>
-						<div class="oe_title" invisible="context.get('pop_up', False)">
-	                        <div>
-	                            <label for="user_id" class="oe_edit_only"/>
-	                        </div>
-	                        <h1>
-	                            <field name="user_id"/>
-	                        </h1>
-	                    </div>	
-						<group>
-							<group>
-								<field name="user_name"/>
-								<field name="nc_password" password="True"/>
-							</group>
-							<group>								
-								<field name="sync_calendar"/>
-								<field name="nextcloud_user_id" invisible="1"/>
-							</group>
-						</group>
-						<field name="user_events_hash" groups="base.group_no_one"/>
-						<field name="nc_hash_ids" readonly="1" colspan="2" nolabel="1" groups="base.group_no_one">
-			     			<tree>
-			     				<field name="calendar_event_id"/>
-			    				<field name="nc_event_hash"/>
-			     			</tree>
-			     		</field>
-					</sheet>
-					<footer invisible="context.get('no_footer',False)">
-						<button name="check_nc_connection" string="Login to Nextcloud" type="object" class="btn btn-primary"/>
-					</footer>
-				</form>
-			</field>
-		</record>
-		
 		<record id="nc_sync_user_form_view" model="ir.ui.view">
 			<field name="name">nc.sync.user.form.view</field>
 			<field name="model">nc.sync.user</field>
 			<field name="arch" type="xml">
 				<form string="Nextcloud Sync User Form">
+					<header invisible="context.get('pop_up', False)">
+						<button name="check_nc_connection" string="Login to Nextcloud" type="object" class="btn btn-primary" 
+							invisible="not context.get('no_footer',False)" attrs="{'invisible':[('user_has_calendar','=',True)]}"/>						
+					</header>
 					<sheet>
 						<div class="oe_title" invisible="context.get('pop_up', False)">
 	                        <div>
@@ -72,12 +34,12 @@
 							<group>
 								<field name="user_has_calendar" invisible="1"/>
 								<field name="user_name"/>
-								<field name="nc_calendar_id" widget="selection"
-									domain="[('user_id', '=', user_id)]" attrs="{'required': [('user_has_calendar', '=', True)]}"/>
+								<field name="nc_calendar_id" widget="selection" domain="[('user_id', '=', user_id)]" 
+									attrs="{'required': [('user_has_calendar', '=', True)], 'invisible':[('user_has_calendar', '=', False)]}"/>
 							</group>
 							<group>
 								<field name="nc_password" password="True"/>
-								<field name="sync_calendar"/>
+								<field name="sync_calendar" attrs="{'invisible':[('nc_calendar_id','=',False)]}"/>
 								<field name="nextcloud_user_id" invisible="1"/>
 							</group>
 						</group>
@@ -88,7 +50,10 @@
 						</div>
 					</sheet>
 					<footer invisible="context.get('no_footer',False)">
-						<button name="save_user_config" string="Save" icon="fa-check" class="btn btn-primary" type="object"/>
+						<button name="check_nc_connection" string="Login to Nextcloud" type="object" class="btn btn-primary"
+							attrs="{'invisible':[('user_has_calendar','=',True)]}"/>
+						<button name="save_user_config" string="Save" icon="fa-check" class="btn btn-primary" type="object"
+							attrs="{'invisible':[('user_has_calendar','=',False)]}"/>
 						<button string="Discard" class="btn-secondary" special="cancel" icon="fa-times"/>
 					</footer>
 				</form>
