--- a/nextcloud_odoo_sync/views/nc_sync_user_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_user_views.xml
@@ -19,6 +19,7 @@
 				<header invisible="context.get('pop_up', False)">
 					<button name="check_nc_connection" string="Login to Nextcloud" type="object" class="btn btn-primary"
 						invisible="not context.get('no_footer',False)" attrs="{'invisible':[('user_has_calendar','=',True)]}"/>
+					<button name="check_nc_connection" string="Refresh NextCloud Calendars" type="object" class="btn btn-primary" attrs="{'invisible':[('user_has_calendar','!=',True)]}"/>
 				</header>
 				<sheet>
 					<div class="oe_title" invisible="context.get('pop_up', False)">
@@ -35,6 +36,7 @@
 							<field name="user_name"/>
 							<field name="nc_calendar_id" widget="selection" domain="[('user_id', '=', user_id)]"
 								attrs="{'required': [('user_has_calendar', '=', True)], 'invisible':[('user_has_calendar', '=', False)]}"/>
+							<field name="nc_email" attrs="{'invisible':[('user_has_calendar','=',False)]}" readonly="1"/>
 						</group>
 						<group>
 							<field name="nc_password" password="True"/>
@@ -53,6 +55,7 @@
 						attrs="{'invisible':[('user_has_calendar','=',True)]}"/>
 					<button name="save_user_config" string="Save" icon="fa-check" class="btn btn-primary" type="object"
 						attrs="{'invisible':[('user_has_calendar','=',False)]}"/>
+					<button name="check_nc_connection" string="Refresh NextCloud Calendars" type="object" class="btn btn-primary" attrs="{'invisible':[('user_has_calendar','!=',True)]}"/>
 					<button string="Discard" class="btn-secondary" special="cancel" icon="fa-times"/>
 				</footer>
 			</form>
