--- a/nextcloud_odoo_sync/wizards/run_sync_wizard_views.xml
+++ b/nextcloud_odoo_sync/wizards/run_sync_wizard_views.xml
@@ -12,7 +12,7 @@
                     </group>
                 </sheet>
                 <footer>
-                    <button class="btn btn-primary" type="object" name="run_sync_cron_test" string="Yes"/>
+                    <button class="btn btn-primary" type="object" name="run_sync_cron" string="Yes"/>
                     <button special="cancel" string="No" class="btn-secondary"/>
                 </footer>
             </form>
