--- a/v_nextcloud/views/nextcloud_views.xml
+++ b/v_nextcloud/views/nextcloud_views.xml
@@ -22,24 +22,30 @@
 				<sheet>				
 					<group>
 						<group>
-							<field name="name"/>
-							<field name="hostname"/>
-							<field name="api_url"/>
+							<field name="sync_user_id" required="1"/>
+							<field name="name" invisible="1"/>
+							<field name="hostname" invisible="1"/>
+							<field name="api_url" invisible="1"/>
+							<!-- 
 							<field name="event_count"/>
+							 -->
 						</group>
-						<group>
-							<field name="username"/>
-							<field name="password"/>
+						<group>							
+							<field name="username" invisible="1"/>
+							<field name="password" invisible="1"/>
+							<!-- 
 							<field name="json_output"/>
 							<label for="calendar_event_id"/>
 							<div class="o_row">
 							    <field name="calendar_event_id"/>
 							    <button name="create_next_cloud_event" type="object" string="Sync Event to Next Cloud"/>
 							</div>
+							 -->
 						</group>
 					</group>
 					<group>
 						<table width="100%">
+							<!-- 
 						  	<tr>
 								<td><button name="test_webdav" string="Connect WebDav" type="object"/></td>
 								<td>Test Webdav connection. Returns list of user information</td>
@@ -47,6 +53,10 @@
 							<tr>
 								<td><button name="test_caldav" string="Connect CalDav" type="object"/></td>
 								<td>Test Caldav connection. Returns list of calendar information</td>
+							</tr>							
+							<tr>
+								<td><button name="sync_cron_test" string="Sync cron test" type="object"/></td>
+								<td>Initial Sync Cron test</td>
 							</tr>
 							<tr>
 								<td><button name="create_odoo_events" string="Create Odoo Events" type="object"/></td>
@@ -60,6 +70,7 @@
 								<td><button name="load_all_nextcloud_events" string="Get Nextcloud Events" type="object"/></td>
 								<td>Loads all Nextcloud event records. Returns the duration of the process</td>
 							</tr>
+							 -->
 							<tr>
 								<td><button name="delete_all_nextcloud_events" string="Delete all Nextcloud Events" type="object"/></td>
 								<td>Deletes all Nextcloud event records. Returns the duration of the process</td>
@@ -67,11 +78,7 @@
 							<tr>
 								<td><button name="delete_all_odoo_events" string="Delete all Odoo Events" type="object"/></td>
 								<td>Deletes all Odoo event records. Returns the duration of the process</td>
-							</tr>
-							<tr>
-								<td><button name="sync_cron_test" string="Sync cron test" type="object"/></td>
-								<td>Initial Sync Cron test</td>
-							</tr>
+							</tr>							
 						</table>
 					</group>
 					<group>
