--- a/nextcloud_odoo_sync/views/res_config_settings_views.xml
+++ b/nextcloud_odoo_sync/views/res_config_settings_views.xml
@@ -6,16 +6,19 @@
            <field name="inherit_id" ref="base.res_config_settings_view_form"/>
            <field name="arch" type="xml">
            	<xpath expr="//div[hasclass('settings')]" position="inside">
-           		<div class="app_settings_block" data-string="Nextcloud" string="Nextcloud" data-key="nextcloud">
+           		<div class="app_settings_block" data-string="Nextcloud" string="Nextcloud" data-key="nextcloud_odoo_sync" id="nextcloud">
            			<div id="nextcloud_general_settings">
                            <h2>General</h2>
                            <div class="row mt16 o_settings_container" name="users_setting_container">
                                <div class="col-12 col-lg-6 o_setting_box" id="active_user_setting">
                                	<div class="o_setting_left_pane">
-	                                <field name="enable_calendar_sync"/>
+	                                <field name="enable_calendar_sync" nolabel="1"/>
 	                            </div>
                                    <div class="o_setting_right_pane">
                                    	<label for="enable_calendar_sync"/>
+                                   	<div class="text-muted">
+	                                        Define NextCloud admin user cridentials
+	                                </div>
                                    	<div class="content-group">
                                            <div class="mt8 row">
                                                <label for="nextcloud_url" class="col-3 col-lg-3"/>
@@ -58,7 +61,6 @@
         <field name="name">Settings</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">res.config.settings</field>
-        <field name="view_id" ref="nextcloud_odoo_sync.res_config_settings_nextcloud_view_form"/>
         <field name="view_mode">form</field>
         <field name="target">inline</field>
         <field name="context">{'module' : 'nextcloud_odoo_sync', 'bin_size': False}</field>
