--- a/nextcloud_odoo_sync/views/res_config_settings_views.xml
+++ b/nextcloud_odoo_sync/views/res_config_settings_views.xml
@@ -1,74 +1,83 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-	<data>
-		<record id="res_config_settings_nextcloud_view_form" model="ir.ui.view">
-			<field name="name">res.config.settings.nextcloud.view.form</field>
-            <field name="model">res.config.settings</field>
-            <field name="inherit_id" ref="base.res_config_settings_view_form"/>
-            <field name="arch" type="xml">
-            	<xpath expr="//div[hasclass('settings')]" position="inside">
-            		<div class="app_settings_block" data-string="Nextcloud" string="Nextcloud" data-key="nextcloud">
-            			<div id="nextcloud_general_settings">
-                            <h2>General</h2>
-                            <div class="row mt16 o_settings_container" name="users_setting_container">
-                                <div class="col-12 col-lg-6 o_setting_box" id="active_user_setting">
-                                	<div class="o_setting_left_pane">
-		                                <field name="enable_calendar_sync"/>
-		                            </div>
-                                    <div class="o_setting_right_pane">
-                                    	<label for="enable_calendar_sync"/>
-                                    	<div class="content-group">
-                                            <div class="mt8 row">
-                                                <label for="nextcloud_url" class="col-3 col-lg-3"/>
-                                                <field name="nextcloud_url" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
-                                            </div>
-                                        </div>
-                                        <div class="content-group">
-                                            <div class="mt8 row">
-                                                <label for="nextcloud_login" class="col-3 col-lg-3"/>
-                                                <field name="nextcloud_login" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
-                                            </div>
-                                        </div>
-                                        <div class="content-group">
-                                            <div class="mt8 row">
-                                                <label for="nextcloud_password" class="col-3 col-lg-3"/>
-                                                <field name="nextcloud_password" password="True" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
-                                            </div>
-                                        </div>
-                                        <div class="content-group">
-                                            <div class="mt8 row">
-                                                <label for="nextcloud_connection_status" class="col-3 col-lg-3"/>
-                                                <field name="nextcloud_connection_status" readonly="1"/>
-                                            </div>
+	<record id="res_config_settings_nextcloud_view_form" model="ir.ui.view">
+		<field name="name">res.config.settings.nextcloud.view.form</field>
+           <field name="model">res.config.settings</field>
+           <field name="inherit_id" ref="base.res_config_settings_view_form"/>
+           <field name="arch" type="xml">
+           	<xpath expr="//div[hasclass('settings')]" position="inside">
+           		<div class="app_settings_block" data-string="Nextcloud" string="Nextcloud" data-key="nextcloud_odoo_sync" id="nextcloud">
+           			<div id="nextcloud_general_settings">
+                        <h2>General</h2>
+                        <div class="row mt16 o_settings_container" name="users_setting_container">
+                            <div class="col-12 col-lg-6 o_setting_box" id="active_user_setting">
+                            	<div class="o_setting_left_pane">
+                              <field name="enable_calendar_sync" nolabel="1"/>
+                          </div>
+                                <div class="o_setting_right_pane">
+                                	<label for="enable_calendar_sync"/>
+                                	<div class="text-muted">
+                                      	Define NextCloud admin user cridentials
+                              		</div>
+                                	<div class="content-group">
+                                        <div class="mt8 row">
+                                            <label for="nextcloud_url" class="col-3 col-lg-3"/>
+                                            <field name="nextcloud_url" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-lg-6 o_setting_box" id="invite_users_setting" attrs="{'invisible': [('nextcloud_connection_status', '!=', 'fail')]}">
-                                    <div class="o_setting_right_pane">
-                                        <field name="nextcloud_error" placeholer="Error" readonly="1"/>
+                                    <div class="content-group">
+                                        <div class="mt8 row">
+                                            <label for="nextcloud_login" class="col-3 col-lg-3"/>
+                                            <field name="nextcloud_login" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
+                                        </div>
+                                    </div>
+                                    <div class="content-group">
+                                        <div class="mt8 row">
+                                            <label for="nextcloud_password" class="col-3 col-lg-3"/>
+                                            <field name="nextcloud_password" password="True" attrs="{'required':[('enable_calendar_sync','=',True)]}"/>
+                                        </div>
+                                    </div>
+                                    <div class="content-group">
+                                        <div class="mt8 row">
+                                            <label for="nextcloud_connection_status" class="col-3 col-lg-3"/>
+                                            <field name="nextcloud_connection_status" readonly="1"/>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-12 col-lg-6 o_setting_box" id="nc_error" attrs="{'invisible': [('nextcloud_connection_status', '!=', 'fail')]}">
+                                <div class="o_setting_right_pane">
+                                    <field name="nextcloud_error" placeholer="Error" readonly="1"/>
+                                </div>
+                            </div>
+                            <div class="col-12 col-lg-6 o_setting_box" id="logs_setting">
+                                <div class="o_setting_right_pane">
+                                    <label for="log_capacity"/>
+                                </div>
+                                <div class="o_setting_right_pane">
+                                    <field name="log_capacity" attrs="{'required':[('enable_calendar_sync','=',True)]}"/> days
+                                </div>
+                            </div>
                         </div>
-            		</div>
-            	</xpath>
-            </field>
-		</record>
-		
-		<record id="nc_sync_settings_action" model="ir.actions.act_window">
-	        <field name="name">Settings</field>
-	        <field name="type">ir.actions.act_window</field>
-	        <field name="res_model">res.config.settings</field>
-	        <field name="view_id" ref="nextcloud_odoo_sync.res_config_settings_nextcloud_view_form"/>
-	        <field name="view_mode">form</field>
-	        <field name="target">inline</field>
-	        <field name="context">{'module' : 'nextcloud_odoo_sync', 'bin_size': False}</field>
-	    </record>
-	    
-	    <menuitem
-	        id="nc_sync_settings_menu"
-	        name="Settings"
-	        parent="menu_main_nextcloud_config"
-	        action="nextcloud_odoo_sync.nc_sync_settings_action"
-	        sequence="0"/>
-	</data>
+                    </div>
+           		</div>
+           	</xpath>
+           </field>
+	</record>
+
+	<record id="res_config_settings_nc_sync_settings_action" model="ir.actions.act_window">
+        <field name="name">Settings</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">res.config.settings</field>
+        <field name="view_mode">form</field>
+        <field name="target">inline</field>
+        <field name="context">{'module' : 'nextcloud_odoo_sync', 'bin_size': False}</field>
+    </record>
+
+    <menuitem
+        id="nc_sync_settings_menu"
+        name="Settings"
+        parent="menu_main_nextcloud_config"
+        action="nextcloud_odoo_sync.res_config_settings_nc_sync_settings_action"
+        sequence="0"/>
 </odoo>
