--- a/nextcloud_odoo_sync/views/nc_sync_user_views.xml
+++ b/nextcloud_odoo_sync/views/nc_sync_user_views.xml
@@ -40,6 +40,7 @@
 						</group>
 						<group>
 							<field name="nc_password" password="True"/>
+							<field name="start_date" attrs="{'required': [('user_has_calendar', '=', True)], 'invisible':[('user_has_calendar', '=', False)]}"/>
 							<field name="sync_calendar" attrs="{'invisible':[('nc_calendar_id','=',False)]}"/>
 							<field name="nextcloud_user_id" invisible="1"/>
 						</group>
